# WP10_tutorial_text_classification

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  metadata.json  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: build_website.yml
5_RAG/: README.md  rag_classification.html
chapters/: fine-tune.qmd  metadata.json
chapters/1_DataAugmentation/: NAFclasses.xlsx  data_augmentation.html  data_augmentation.ipynb  data_augmentation_slides.pptx  data_ingestion.ipynb
chapters/2_FineTune/: fine-tuning-bert-example.html  fine-tuning-bert-example.ipynb
chapters/3_RAG/: rag_classification.html  rag_classification.ipynb
data/synthetic/: synthetic_df_BOTU.csv
data_preprocessing/: data_augmentation.html  data_augmentation.ipynb  data_ingestion.ipynb
model_training/: fine-tuning-bert-example.html  fine-tuning-bert-example.ipynb  zero-shot-classification-with-RAG.ipynb
notebooks/: index.ipynb
notebooks/5_RAG/: rag_classification.out.ipynb
notebooks/chapters/1_DataAugmentation/: data_augmentation.out.ipynb
notebooks/chapters/2_FineTune/: fine-tuning-bert-example.out.ipynb
notebooks/chapters/3_RAG/: rag_classification.out.ipynb
notebooks/data_preprocessing/: data_augmentation.out.ipynb
notebooks/model_training/: fine-tuning-bert-example.out.ipynb
sspcloud/: init-trainees-fine-tune.sh
sspcloud/1_DataAugmentation/: init-trainees-DA.sh
sspcloud/2_FineTune/: data_ingestion.py  init-trainees-fine-tune.sh
sspcloud/3_RAG/: init-trainees-RAG.sh
