[project]
name = "aiml4os-template-quarto-r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.1",
    "torchvision>=0.23.0",
    "transformers[torch]>=4.55.2",
]
